Add new VS Code extensions and update Java settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-21",
-            "path": "/home/vscode/graalvm-jdk-21.0.3+7.1"
+            "path": "/home/vscode/graalvm-jdk-21.0.3+7.1",
+            "default": true
         }
     ],
     "graalvm.installations": [
@@ -23,5 +24,8 @@
             "environmentVariable": "JAVA_HOME",
             "value": "/home/vscode/graalvm-jdk-21.0.3+7.1"
         }
-    ]
+    ],
+    "java.server.launchMode": "Standard",
+    "graalvm.home": "/home/vscode/graalvm-jdk-21.0.3+7.1",
+    "java.home": "/home/vscode/graalvm-jdk-21.0.3+7.1"
 }
