Add Continue.continue to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,8 @@
 				"waderyan.gitblame",
 				"donjayamanne.githistory",
 				"arturock.gitstash",
-				"donjayamanne.git-extension-pack"
+				"donjayamanne.git-extension-pack",
+				"Continue.continue"
 			]
 		}
 	}
