--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,24 +8,23 @@
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-21",
-            "path": "/home/vscode/graalvm-jdk-21.0.3+7.1",
+            "path": "/home/vscode/graalvm-jdk-21.0.4+8.1",
             "default": true
         }
     ],
     "graalvm.installations": [
-        "/home/vscode/graalvm-jdk-21.0.3+7.1"
+        "/home/vscode/graalvm-jdk-21.0.4+8.1"
     ],
     "terminal.integrated.env.linux": {
-        "GRAALVM_HOME": "/home/vscode/graalvm-jdk-21.0.3+7.1"
+        "GRAALVM_HOME": "/home/vscode/graalvm-jdk-21.0.4+8.1"
     },
-    "java.jdt.ls.java.home": "/home/vscode/graalvm-jdk-21.0.3+7.1",
+    "java.jdt.ls.java.home": "/home/vscode/graalvm-jdk-21.0.4+8.1",
     "maven.terminal.customEnv": [
         {
             "environmentVariable": "JAVA_HOME",
-            "value": "/home/vscode/graalvm-jdk-21.0.3+7.1"
+            "value": "/home/vscode/graalvm-jdk-21.0.4+8.1"
         }
     ],
     "java.server.launchMode": "Standard",
-    "graalvm.home": "/home/vscode/graalvm-jdk-21.0.3+7.1",
-    "java.home": "/home/vscode/graalvm-jdk-21.0.3+7.1"
+    "graalvm.home": "/home/vscode/graalvm-jdk-21.0.4+8.1"
 }
