--- a/build.gradle
+++ b/build.gradle
@@ -35,23 +35,23 @@ subprojects {
     dependencies {
 
         // ActiveJ
-        implementation 'com.github.activej.activej:activej:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-inject:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-config:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-launcher:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-launchers-common:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-rpc:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-datastream:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-servicegraph:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-workers:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-serializer:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-boot:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-promise:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-eventloop:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-http:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-common:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-jmxapi:v6.0-beta2'
-        implementation 'com.github.activej.activej:activej-net:v6.0-beta2'
+        implementation 'com.github.Censseo.activej:activej:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-inject:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-config:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-launcher:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-launchers-common:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-rpc:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-datastream:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-servicegraph:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-workers:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-serializer:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-boot:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-promise:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-eventloop:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-http:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-common:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-jmxapi:master-SNAPSHOT'
+        implementation 'com.github.Censseo.activej:activej-net:master-SNAPSHOT'
         
         // Logback
         implementation 'ch.qos.logback:logback-classic:1.5.3'
